Add upload status message for products

--- a/admin/products/products.html
+++ b/admin/products/products.html
@@ -20,6 +20,7 @@
   <br><br>
 
   <button id="addBtn">Add Gola</button>
+  <p id="statusMsg" style="color: green; font-weight: bold;"></p>
 
   <hr>
 
@@ -41,5 +42,6 @@
     }
   });
 </script>
+
 
 </html>
