Add upload status message for products

--- a/admin/products/products.html
+++ b/admin/products/products.html
@@ -10,13 +10,13 @@
 
   <h3>Add New Gola</h3>
 
-  <input type="text" id="name" placeholder="Gola name" />
+  <input type="text" id="golaName" placeholder="Gola name" />
   <br><br>
 
-  <input type="number" id="price" placeholder="Price ₹" />
+  <input type="number" id="golaprice" placeholder="Price ₹" />
   <br><br>
 
-  <input type="file" id="image" accept="image/*" />
+  <input type="file" id="golaImage" accept="image/*" />
   <br><br>
 
   <button id="addBtn">Add Gola</button>
